--- a/modules/cmc-rest-api/src/main/resources/messages.properties
+++ b/modules/cmc-rest-api/src/main/resources/messages.properties
@@ -1,2 +1,2 @@
 GENERAL=Internal Server Error. Trace code: {0}.
-CERTIFICATE_NOT_FOUND=No certificate found with alias={0}. Trace code: {1}
+CERTIFICATE_NOT_FOUND=No certificates found with alias={0}. Trace code: {1}
